# liquibook

./: AWS_ARCHITECTURE.md  AWS_CONSOLE_SETUP_GUIDE.md  PERFORMANCE.md  WINDOWS_BUILD_GUIDE.md  cache_backup.json  cache_depth.json  deploy-all-lambdas.ps1  engine_start.sh  generate_architecture.py  winenv.bat
.github/workflows/: deploy-engine.yml  deploy-lambda.yml
.obsidian/: appearance.json  workspace.json
aggregator/: run_aggregator.sh
aggregator/include/: valkey_client.h
aggregator/src/: aggregator.cpp  main.cpp  rds_client.cpp  valkey_client.cpp
doc/: KINESIS_ARCHITECTURE.md  OHLCV_dataformat.md  STREAMER_EC2_SETUP.md
doc/AWS-MSK-DOC/: 계정 간 이벤트 소스 매핑 생성.md  구성 파라미터.md  권한 구성.md  이벤트 소스 구성.md  이벤트 소스 매핑.md  자습서.md  클러스터 및 네트워크 설정.md  클러스터 인증.md
doc/api/: README.md
docs/: AWS_LAMBDA_SETUP_GUIDE.md  CACHE_KEY_REFERENCE.md  CANDLE_ARCHITECTURE.md  CANDLE_IMPROVEMENTS.md  CANDLE_TESTING.md  CLIENT_DATA_FLOW.md  DATA_SCENARIOS.md  FRONTEND_INTEGRATION_GUIDE.md  캔들 데이터 생성 및 실시간 처리 아키텍처.md
lambda/: README.md  clean-artifacts.ps1  deploy-all-lambdas.ps1  layer.txt
lambda/AWSSupernoba-admin/: index.mjs
lambda/AWSSupernoba-order-router/: index.mjs
lambda/AWScandle-aggregator/: index.mjs
lambda/AWSchart-data-handler/: index.mjs
lambda/AWSconnect-handler/: index.mjs
lambda/AWSdepth-stream-public/: index.mjs
lambda/AWSdisconnect-handler/: index.mjs
lambda/AWSsubscribe-handler/: index.mjs
lambda/AWStrades-backup-handler/: index.mjs
lambda/AWSuser-stream-handler/: index.mjs
lambda/Supernoba-admin/: index.mjs
lambda/Supernoba-asset-handler/: index.mjs  migrate-symbols.mjs  package-lock.json
lambda/Supernoba-chart-data-handler/: index.mjs
lambda/Supernoba-daily-backup-handler/: index.mjs
lambda/Supernoba-disconnect-handler/: index.mjs
lambda/Supernoba-fill-processor/: index.mjs
lambda/Supernoba-notifier/: index.mjs
lambda/Supernoba-order-router/: build.js  index.mjs  package-lock.json  package.json
lambda/Supernoba-order-status-handler/: index.mjs
lambda/Supernoba-subscribe-handler/: index.mjs
lambda/Supernoba-symbol-manager/: index.mjs
lambda/Supernoba-trades-backup-handler/: index.mjs
src/book/: order_listener.h  trade_listener.h
streamer/: CMakeLists.txt  README.md
streamer/include/: depth_broadcaster.h  redis_client.h  websocket_server.h
streamer/node/: check_redis_config.mjs  index.mjs  package-lock.json  package.json  run_streamer.sh
streamer/src/: depth_broadcaster.cpp  main.cpp  redis_client.cpp  websocket_server.cpp
test/: admin_check.js
test/auto_tester/: package-lock.json  test_core.js
test/market_maker/: index.js
test/verification/: verify_trades.js
test/web/: README.md  index.html  ticker-board.html
web/: easy.html  fast.html  flexible.html  fluid.html  get-started.html  index.html  sub-template.html
wrapper/: CMakeLists.txt  README.md  build_ec2.sh  run_engine.sh  stunnel_setup.sh  vcpkg.json
wrapper/include/: config.h  dynamodb_client.h  engine_core.h  grpc_service.h  iproducer.h  kafka_consumer.h  kafka_producer.h  kinesis_consumer.h  kinesis_producer.h  logger.h  market_data_handler.h  metrics.h  msk_iam_auth.h  notification_client.h  order.h  redis_client.h  websocket_server.h
wrapper/proto/: snapshot.proto
wrapper/src/: config.cpp  dynamodb_client.cpp  engine_core.cpp  grpc_service.cpp  kafka_consumer.cpp  kafka_producer.cpp  kinesis_consumer.cpp  kinesis_producer.cpp  logger.cpp  main.cpp  market_data_handler.cpp  metrics.cpp  msk_iam_auth.cpp  notification_client.cpp  order.cpp  redis_client.cpp  websocket_server.cpp
